<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        Guidelines -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_input_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_input_bot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_buttons_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_buttons_bot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <!--        Views -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/style_tv_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/tv_lesson35_title"
            app:layout_constraintBottom_toBottomOf="@id/gl_input_top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        Input-->
        <EditText
            android:id="@+id/et_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:hint="@string/tv_hint_id"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/et_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/gl_input_top" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:hint="@string/tv_hint_name"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/et_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_id" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:hint="@string/tv_hint_email"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/gl_input_bot"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <!--        Buttons -->
        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_add"
            app:layout_constraintBottom_toBottomOf="@id/gl_buttons_bot"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_read"
            app:layout_constraintTop_toTopOf="@id/gl_buttons_top" />

        <Button
            android:id="@+id/btn_read"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_read"
            app:layout_constraintBottom_toBottomOf="@id/gl_buttons_bot"
            app:layout_constraintLeft_toRightOf="@id/btn_add"
            app:layout_constraintRight_toLeftOf="@id/btn_clear"
            app:layout_constraintTop_toTopOf="@id/gl_buttons_top" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_clear"
            app:layout_constraintBottom_toBottomOf="@id/gl_buttons_bot"
            app:layout_constraintLeft_toRightOf="@id/btn_read"
            app:layout_constraintRight_toLeftOf="@id/btn_update"
            app:layout_constraintTop_toTopOf="@id/gl_buttons_top" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_update"
            app:layout_constraintBottom_toBottomOf="@id/gl_buttons_bot"
            app:layout_constraintLeft_toRightOf="@id/btn_clear"
            app:layout_constraintRight_toLeftOf="@id/btn_delete"
            app:layout_constraintTop_toTopOf="@id/gl_buttons_top" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_delete"
            app:layout_constraintBottom_toBottomOf="@id/gl_buttons_bot"
            app:layout_constraintLeft_toRightOf="@id/btn_update"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/gl_buttons_top" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>